Move fonts and images out to parent directory to avoid duplication.
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -39,12 +39,12 @@
 	<body>
 
 		<div class="reveal">
-			<a id="logo-white"><img src="./images/Red_Hat_RGB_reverse.svg" alt=""/></a>
-			<a id="logo-black"><img src="./images/Red_Hat_RGB.svg" alt=""/></a>
+			<a id="logo-white"><img src="../images/Red_Hat_RGB_reverse.svg" alt=""/></a>
+			<a id="logo-black"><img src="../images/Red_Hat_RGB.svg" alt=""/></a>
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
-				<section data-state="logo-light" data-background-image="./images/RH-Template-Background8.png">
+				<section data-state="logo-light" data-background-image="../images/RH-Template-Background8.png">
 					<h2><font color=#ffffff>VFIO, OVMF, GPU, and You</font></h2>
 					<h4><font color=#d0d0d0>The state of GPU assignment in QEMU/KVM</font></h4>
 					<p>
@@ -350,7 +350,7 @@ function linkify( selector ) {
 					</ul>
 				</section>
 
-				<section data-state="logo-none" data-background-image="./images/Red_Hat_RGB.svg" data-background-size="50%">
+				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-background-size="50%">
 				</section>
 
 			</div>
