Must have favicon
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -19,6 +19,7 @@
 
 		<!-- For syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon" />
 
 		<!-- If the query includes 'print-pdf', include the PDF print sheet -->
 		<script>
