--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -40,8 +40,8 @@
 	<body>
 
 		<div class="reveal">
-			<a id="logo-white"><img src="../images/Red_Hat_RGB_reverse.svg" alt=""/></a>
-			<a id="logo-black"><img src="../images/Red_Hat_RGB.svg" alt=""/></a>
+			<a id="logo-white"><img src="../images/Red_Hat_RGB_reverse.png" alt=""/></a>
+			<a id="logo-black"><img src="../images/Red_Hat_RGB.png" alt=""/></a>
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
