ff on Windows hyphenates this instead of just wrapping
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -55,7 +55,8 @@
 
 				<section>
 					<section data-state="logo-light" data-background-image="../images/RH-Template-Background7.jpg">
-						<h2><font color=#e0e0e0>The current state of VGA assignment</font></h2>
+						<h2><font color=#e0e0e0>The current state of VGA</font></h2>
+						<h2><font color=#e0e0e0>assignment</font></h2>
 					</section>
 					<section>
 						<h2>VGA assignment defined:</h2>
