extend background to 2nd slide
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -154,8 +154,8 @@
 					<section data-transition="zoom" data-transition-speed="slow" data-state="logo-light" data-background-image="../images/RH-Template-Background9.jpg">
 						<h2><font color=#e0e0e0>What else could we do?</font></h2>
 					</section>
-					<section data-transition="zoom">
-						<h2>Can we avoid VGA?</h2>
+					<section data-transition="zoom" data-state="logo-light" data-background-image="../images/RH-Template-Background9.jpg">
+						<h2><font color=#e0e0e0>Can we avoid VGA?</font></h2>
 					</section>
 					<section>
 						<h3>Secondary graphics device assignment</h3>
