--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -363,7 +363,15 @@
 					<h2 class="fragment"><font color=#e0e0e0>Thank you</font></h2>
 				</section>
 
-				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-background-transition="zoom" data-background-size="50%">
+				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="50%">
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p><font color=#000000>Alex Williamson / </font><a href="mailto:alex.williamson@redhat.com"><font color=#cc0000>alex.williamson@redhat.com</font></a></p>
 				</section>
 <!-- Unused...
 				<section>
