<grumble> ff would rather hyphenate lings than wrap at work breaks
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -158,7 +158,7 @@
 						<h2><font color=#e0e0e0>Can we avoid VGA?</font></h2>
 					</section>
 					<section>
-						<h3>Secondary graphics device assignment</h3>
+						<h3>Secondary graphics</h3>
 						<ul class="fragment">
 							<li>Emulated VGA for VM primary display</li>
 							<li>Assigned graphics card for secondary</li>
