tiny wording tweak
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -282,7 +282,7 @@
 					<section data-transition="linear">
 						<h3>440fx vs q35</h3>
 						<p>OVMF recently added q35 support</p>
-						<p>libvirt includes only basic q35 support</p>
+						<p>libvirt includes basic q35 support</p>
 							<ul><li class="fragment">restricted configurations</li></ul>
 						<p>&nbsp;</p>
 						<p class="fragment">440fx is likely the <i>easier</i> path for Windows guests</p>
