No need for a list here
Signed-off-by: Alex Williamson <alex.williamson@redhat.com>

--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -216,10 +216,9 @@
 					</section>
 					<section>
 						<h3>Step 1: OVMF</h3>
-						<ul>
-						<li class="fragment">Open Virtual Machine Firmware</li>
-						<li class="fragment">An implementation of UEFI built on the EDK II code base</li>
-						<li class="fragment">Replaces Seabios</li>
+						<p>Open Virtual Machine Firmware</p>
+						<p>An implementation of UEFI built on the EDK II code base</p>
+						<p>Replaces Seabios</p>
 					</section>
 					<section>
 						<h3>OVMF Setup</h3>
