--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -395,11 +395,14 @@
 					</ul>
 				</section>
 
-				<!-- <section data-background-image="../images/RH-Template-Background1.jpg" data-transition="linear" data-background-transition="slide"> -->
-				<section data-background-image="./images/unigine-valley.gif" data-transition="linear" data-background-transition="slide" data-background-size="1024x768">
+				<section data-background-image="./images/unigine-valley.gif" data-transition="linear" data-background-transition="slide">
 					<h1 class="fragment fade-out" data-fragment-index="1"><font color=#e0e0e0>Try it!</font></h1>
 					<h2 class="fragment current-visible" data-fragment-index="1"><font color=#e0e0e0>Questions?</font></h2>
 					<h1 class="fragment"><font color=#e0e0e0>Thank you</font></h1>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
 				</section>
 
 				<section data-state="logo-none" data-background-image="../images/Red_Hat_RGB.svg" data-transition="zoom" data-background-transition="zoom" data-background-size="70%">
