--- a/presentations/KVM-Forum-2014/index.html
+++ b/presentations/KVM-Forum-2014/index.html
@@ -45,6 +45,13 @@
 
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
+				<section>
+					<h1>Notice</h1>
+					<h2>If this presentation is found prior to KVM Forum 2014</h2>
+					<h2>Düsseldorf, Germany October 14 - 16, 2014</h2>
+					<h2>It would be <b>greatly</b> appreciated to not advertise or share it with others</h2>
+					<h2>Thank you</h2>
+				</section>
 				<section data-state="logo-light" data-background-image="../images/RH-Template-Background8.jpg">
 					<h2><font color=#ffffff>VFIO, OVMF, GPU, and You</font></h2>
 					<h4><font color=#d0d0d0>The state of GPU assignment in QEMU/KVM</font></h4>
